<resources>
    <string name="app_name">MoviesRestApi</string>
    <string name="poster">poster</string>
    <string name="nao_conectado">Não há conexão com a internet</string>
    <string name="conectado">Conectado</string>
    <string name="overview">Overview:</string>
    <string name="release_date">Release Date:</string>
    <string name="tagline">Tagline:</string>
    <string name="original_title">Original Title:</string>
    <string name="instruction">Instruction:</string>
    <string name="loading_movie_data">Loading Movie Data…</string>
    <string name="loading_movie_details">Loading Movie Details…</string>
    <string name="update_database">Update Movie Database…</string>
    <string name="reload">Reload</string>
    <string name="revenue">Revenue:</string>
    <string name="popularity">Popularity:</string>
</resources>
